# hierarchical_data

./: README.md  pyproject.toml
app/: admin.py  models.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20200924_1729.py
mpttdemo/: settings.py  urls.py
templates/: index.html
